tests/ui/fail/repeated_skip.stderr
error: Multiple #[destroy_ignore] attributes on a single field
  --> tests/ui/fail/repeated_skip.rs:11:5
   |
11 | /     #[destroy_ignore]
12 | |     #[destroy_ignore]
13 | |     b: String,
   | |_____________^

error: Multiple #[destroy_ignore] attributes on a single field
  --> tests/ui/fail/repeated_skip.rs:19:5
   |
19 | /     #[destroy_ignore]
20 | |     #[destroy_ignore]
21 | |     String,
   | |__________^
